# tomatsource

./: .gitignore
episode-projekter/: newTry.py  radio_soft_playlist_20241202_143902.json
episode-projekter/juleplayliste/: pyproject.toml
episode-projekter/juleplayliste/akk/: RestClient_ReadMed.MD  apiplayground.http  appleUp.md  appleUp.py  playground-env.py  playground.py  spotiUP.md  spotiUp.py
episode-projekter/juleplayliste/mipede/: SpotiUp-json-file.py  radio_soft_playlist_20241221_225614.json
episode-projekter/juleplayliste/simon/: GetSongs.py  README.md
episoder/11/kode/tomatsource11/: hello.py  pyproject.toml
episoder/12/: episode-noter.md
episoder/12/kode/tomatsource12/: hejhej.py  pyproject.toml
episoder/12/kode/tomatsource12/modul/: __init__.py
episoder/13/: episode-noter.md
episoder/13/kode/tomatsource13/: README.md  hejhej.py  pyproject.toml
episoder/13/kode/tomatsource13/modul/: __init__.py  post.py  pre.py
